fix block shadow visibility fix none on sections/column Gap

--- a/client-side/src/app/components/page-builder-internal/page-builder-internal.component.scss
+++ b/client-side/src/app/components/page-builder-internal/page-builder-internal.component.scss
@@ -7,6 +7,8 @@
 
 .sections-container {
     width: 100%;
+    max-width: inherit;
+    overflow-x: hidden;
     margin: 0 auto;
     position: relative;
     display: grid;
